Feat: added some code optimizations for performance