@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.3</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -86,8 +86,8 @@
 	</dependency>
 
 	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-flyway</artifactId>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-core</artifactId>
 	</dependency>
 	<dependency>
 		<groupId>org.flywaydb</groupId>
@@ -100,17 +100,7 @@
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-aspectj</artifactId>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-jpa-test</artifactId>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-webmvc-test</artifactId>
-		<scope>test</scope>
+		<artifactId>spring-boot-starter-aop</artifactId>
 	</dependency>
 
 	<dependency>
@@ -136,6 +126,11 @@
 		<groupId>org.springframework.security</groupId>
 		<artifactId>spring-security-test</artifactId>
 		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.jspecify</groupId>
+		<artifactId>jspecify</artifactId>
+		<version>1.0.0</version>
 	</dependency>
 
 
@@ -168,7 +163,60 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<argLine>-Dnet.bytebuddy.experimental=true @{jacoco.agent.argLine}</argLine>
+			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.10</version>
+			<executions>
+				<execution>
+					<id>prepare-agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+					<configuration>
+						<propertyName>jacoco.agent.argLine</propertyName>
+					</configuration>
+				</execution>
+				<execution>
+					<id>report</id>
+					<phase>test</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>jacoco-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+							<rule>
+								<element>PACKAGE</element>
+								<excludes>
+									<exclude>*Test</exclude>
+								</excludes>
+								<limits>
+									<limit>
+										<counter>LINE</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.0</minimum>
+									</limit>
+								</limits>
+							</rule>
+						</rules>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
 	</build>
 
 </project>
